[project]
name = "OllamaRTC"
version = "0.1.0"
description = "OllamaRTC é um projeto que implementa um servidor WebRTC utilizando aiohttp e aiortc para permitir comunicação em tempo real. Ele inclui uma interface de chat que interage com o modelo de linguagem llama3.2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp-cors>=0.7.0",
    "aiohttp>=3.11.13",
    "aiortc>=1.10.1",
    "openai>=1.65.5",
    "requests>=2.32.3",
]
